--- a/css/style.css
+++ b/css/style.css
@@ -4,22 +4,27 @@ body {
   margin: auto;
 }
 
-img {
+h2 {
+  font-size: 40px;
+  font-weight: bold;
+  text-align: center;
+}
+img, td {
   width: 450px;
 }
 table {
   border: 2px solid;
   width: 100%;
-  text-align: center;
-  vertical-align: center;
   empty-cells: hide;
 }
 
 th {
   background-color: salmon;
   font-size: 20px;
+  text-align: center
 }
 
 td {
+  text-align: center;
   border: 3px solid purple;
 }
