--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ body {
   color: black;
   font-size: 10px;
   margin: auto;
+  font-size: 15px;
 }
 
 h2 {
@@ -9,22 +10,18 @@ h2 {
   font-weight: bold;
   text-align: center;
 }
-img, td {
+
+h3 {
+  font-size: 25px;
+  text-align: center;
+}
+
+img {
   width: 450px;
 }
-table {
-  border: 2px solid;
-  width: 100%;
-  empty-cells: hide;
+
+ul {
+  padding: 10px;
+  list-style: disc inside;
 }
 
-th {
-  background-color: salmon;
-  font-size: 20px;
-  text-align: center
-}
-
-td {
-  text-align: center;
-  border: 3px solid purple;
-}
