--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,14 @@
 body {
   color: #000;
   background-color: #EB6E80;
-  font-size: 10px;
+  font-size: 20px;
+  font-family: Helvetica, sans-serif;
   margin: auto;
-  font-size: 15px;
 }
 
 h2 {
   font-size: 40px;
-  color: darkviolet;
+  color: cornsilk;
   font-weight: bold;
   text-align: center;
 }
@@ -22,10 +22,22 @@ img {
   width: 450px;
   border: 5px solid #008F95;
 }
-
+/* 
 ul {
   padding: 10px;
   text-align: center;
+} */
+
+table, th, td {
+  border: 2px solid #008F95;
+  text-align: center;
+  margin: 0 auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+th {
+  background-color: #008F95;
 }
 
 canvas {
