--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
   background-color: #EB6E80;
   font-size: 20px;
   font-family: Helvetica, sans-serif;
-  margin: auto;
+  margin: 10px auto;
 }
 
 h2 {
@@ -11,24 +11,20 @@ h2 {
   color: cornsilk;
   font-weight: bold;
   text-align: center;
-  margin: 5px;
+  margin: 10px;
 }
 
 h3 {
   font-size: 25px;
   text-align: center;
-  margin: 5px;
+  margin: 10px;
 }
 
 img {
   width: 450px;
   border: 5px solid #008F95;
+  margin: 10px;
 }
-/* 
-ul {
-  padding: 10px;
-  text-align: center;
-} */
 
 table, th, td {
   border: 2px solid #008F95;
@@ -40,11 +36,11 @@ table, th, td {
 
 th {
   background-color: #008F95;
-  padding: 0 20px;
+  padding: 2px 20px;
 }
 
 td {
-  padding: 0 5px;
+  padding: 2px 10px;
 }
 
 canvas {
