reload button added

--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,23 @@ td {
   padding: 2px 10px;
 }
 
+div {
+  width: 300px;
+  margin: 0 auto;
+}
+
 canvas {
   width: 1200px !important;
+  margin: auto;
+  padding: 10px;
+}
+
+#refresh {
+  color: #E24E42;
+  background-color: cornsilk;
+  border-radius: 15px;
+  font-size: 20px;
+  padding: 20px;
+  width: 250px;
   margin: 0 auto;
 }
