--- a/css/cart_style.css
+++ b/css/cart_style.css
@@ -1,21 +1,47 @@
+h1 {
+  text-align: center;
+  font-size: 60px;
+  color: cornsilk;
+  font-weight: bold;
+}
+
+p {
+  text-align: center;
+}
+
 form {
   width: 500px;
+  margin: 0 auto;
+  text-align: center;
 }
 
 label {
   display: block;
+  margin: 5px;
 }
 
-button {
+button, #process-order {
   display: block;
+  color: #E24E42;
+  background-color: cornsilk;
+  font-size: 15px;
+  padding: 5px;
+  width: 100px;
+  border-radius: 10px;
+  margin: 0 auto;
+  margin-top: 10px; 
+}
+
+#process-order {
+  width: 200px;
 }
 
 table {
-  border: 2px solid #C6915D;
+  border: 2px solid #008F95;
 }
 
 td, th {
-  border: 2px solid #C6915D;
+  border: 2px solid #008F95;
   padding: 5px;
   text-align: center;
   vertical-align: middle;
@@ -24,9 +50,18 @@ td, th {
 
 th {
   font-weight: bold;
-  background-color: #BC543B;
+  background-color: #008F95;
 }
 
 img {
   width: 150px;
+}
+
+fieldset {
+  border: 1px solid #008F95;
+}
+
+legend {
+  color: #008F95;
+  padding: 0 5px;
 }
